# webapp-gaidh-litir

./: Makefile  README.md  app.py  main.py  pyproject.toml  render.yaml
.render/: install.sh  run.sh
app/: dependencies.py  gaemaichean.py  main.py
templates/: base.html  root.html
